<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn">

    <TextView
        android:id="@+id/login_lets_roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/king_of_the_world"
        android:text="@string/login_lets_roll"
        android:textColor="@color/splash_screen_tagline"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/login_tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ikaros_regular"
        android:text="@string/login_tagline"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@+id/login_lets_roll"
        app:layout_constraintTop_toBottomOf="@+id/login_lets_roll" />

    <TextView
        android:id="@+id/login_mobno_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/ikaros_regular"
        android:text="@string/login_mobile_number"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/login_tagline"
        app:layout_constraintTop_toBottomOf="@+id/login_tagline" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="8dp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="+91"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:letterSpacing="0.05"
        android:paddingBottom="20dp"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/login_mobno_textview"
        app:layout_constraintTop_toBottomOf="@+id/login_mobno_textview" />

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/signin_btn_bg"
        android:text="@string/login_signin_btn"
        android:textColor="#5D4037"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />


    <LinearLayout
        android:id="@+id/login_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_btn"
        app:layout_constraintVertical_bias="0.26">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/architects_daughter"
            android:padding="8dp"
            android:text="@string/login_newtoapp"
            android:textColor="@color/splash_screen_bg"
            android:textSize="28sp"
            android:textStyle="normal" />

    </LinearLayout>

    <Button
        android:id="@+id/login_reg_user_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/fav_purple"
        android:text="@string/login_reg_user_btn"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_sign_up" />


    <LinearLayout
        android:id="@+id/login_horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_reg_user_btn">

        <View
            android:layout_width="150dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="#ededed"
            app:layout_constraintBottom_toTopOf="@+id/login_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="Or"
            android:textColor="#c0c0c0" />

        <View
            android:layout_width="150dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="#ededed"
            app:layout_constraintBottom_toTopOf="@+id/login_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_btn" />

    </LinearLayout>

    <Button
        android:id="@+id/login_reg_sports_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/fav_purple"
        android:text="@string/login_reg_sportscomp_btn"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_horizontal_line" />
</androidx.constraintlayout.widget.ConstraintLayout>

