<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OTP"
    android:orientation="vertical"
    android:gravity="center_horizontal">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_otp_imageview"
        android:layout_marginTop="80dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_verification"
        android:gravity="center_horizontal"
        android:textSize="32sp"
        android:fontFamily="@font/ikaros_regular"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/otp_enter_text"
        android:textSize="24sp"
        android:padding="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/otp_edittext_one"
            android:background="@drawable/otp_box"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:inputType="number"
            android:textSize="24sp"
            android:textStyle="bold"
            android:maxLength="1"
            android:gravity="center"
            android:layout_margin="4dp"
            android:imeOptions="actionNext"/>
        <EditText
            android:id="@+id/otp_edittext_two"
            android:background="@drawable/otp_box"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:inputType="number"
            android:textSize="24sp"
            android:textStyle="bold"
            android:maxLength="1"
            android:gravity="center"
            android:layout_margin="4dp"
            android:imeOptions="actionNext"/>
        <EditText
            android:id="@+id/otp_edittext_three"
            android:background="@drawable/otp_box"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:inputType="number"
            android:textSize="24sp"
            android:textStyle="bold"
            android:maxLength="1"
            android:gravity="center"
            android:layout_margin="4dp"
            android:imeOptions="actionNext"/>
        <EditText
            android:id="@+id/otp_edittext_four"
            android:background="@drawable/otp_box"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:inputType="number"
            android:textSize="24sp"
            android:textStyle="bold"
            android:maxLength="1"
            android:gravity="center"
            android:layout_margin="4dp"
            android:imeOptions="actionNext"/>
        <EditText
            android:id="@+id/otp_edittext_five"
            android:background="@drawable/otp_box"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:inputType="number"
            android:textSize="24sp"
            android:textStyle="bold"
            android:maxLength="1"
            android:gravity="center"
            android:layout_margin="4dp"
            android:imeOptions="actionNext"/>
        <EditText
            android:id="@+id/otp_edittext_six"
            android:background="@drawable/otp_box"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:inputType="number"
            android:textSize="24sp"
            android:textStyle="bold"
            android:maxLength="1"
            android:gravity="center"
            android:layout_margin="4dp"
            android:imeOptions="actionDone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="4dp"
            android:text="@string/otp_didnt_receive"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/otp_resend_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:text="@string/otp_resend"
            android:textColor="@color/blue_1"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/otp_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/fav_purple"
            android:text="@string/otp_submit"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"/>

        <ProgressBar
            android:id="@+id/otp_progbar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </FrameLayout>

</LinearLayout>